aligned the picture and the name of the author, still to fix

--- a/css/style.css
+++ b/css/style.css
@@ -71,4 +71,10 @@ body {
         color: hsl(0, 0%, 42%);
     }
 
+    .info {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
 }
